--- a/admin/cadastrar_viagens.html
+++ b/admin/cadastrar_viagens.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <h3>Cadastro de Viagens</h3>
-        <form action="../backend/_cadastrar_viagens.php" method="post">
+        <form action="../backend/_cadastrar_viagens.php" method="post" enctype="multipart/form-data">
             <div>
                 <label for="titulo">Título</label>
                 <input type="text" name="titulo" id="titulo">
@@ -22,6 +22,10 @@
             <div>
                 <label for="valor">Valor</label>
                 <input type="number" name="valor" id="valor">
+            </div>
+            <div>
+                <label for="imagem">Imagem</label>
+                <input type="file" name="imagem" id="imagem">
             </div>
             <div>
                 <label for="desc">Descrição</label>
